[Hotel app][features] implement cruds of hotels & rooms
