# models/hotel.js
@@ -1,26 +1,20 @@
-'use strict';
-const {
-  Model
-} = require('sequelize');
-module.exports = (sequelize, DataTypes) => {
-  class Hotel extends Model {
-    /**
-     * Helper method for defining associations.
-     * This method is not a part of Sequelize lifecycle.
-     * The `models/index` file will call this method automatically.
-     */
-    static associate(models) {
-      // define association here
-    }
+const { DataTypes } = require("sequelize");
+const sequelize = require("../config/database");
+
+const Hotel = sequelize.define("Hotel", {
+  id: { type: DataTypes.INTEGER, primaryKey: true, autoIncrement: true },
+  name: { type: DataTypes.STRING, allowNull: false },
+  location: { type: DataTypes.STRING, allowNull: false },
+  description: { type: DataTypes.TEXT, allowNull: false },
+  adminId: {
+    type: DataTypes.INTEGER,
+    allowNull: false,
+    references: { model: "users", key: "id" },
+    onDelete: "CASCADE",
   }
-  Hotel.init({
-    name: DataTypes.STRING,
-    location: DataTypes.STRING,
-    description: DataTypes.TEXT,
-    adminId: DataTypes.INTEGER
-  }, {
-    sequelize,
-    modelName: 'Hotel',
-  });
-  return Hotel;
-};
+}, {
+  timestamps: true, // Enable createdAt & updatedAt
+  tableName: "hotels"
+});
+
+module.exports = Hotel;
